Upload hasil web svara 2

--- a/soal/soal7.html
+++ b/soal/soal7.html
@@ -14,10 +14,38 @@
   }
 
   /* buat CSS di disini */
+  body>div{
+  	width:100%;
+  	height: 20px;
+  }
+  .merah{
+  	background-color: #FF0900;
+  }
+  .orange{
+  	background-color: #FF7F00;
+  }
+  .kuning{
+  	background-color: #FFEF00;
+  }
+  .hijau{
+  	background-color: #00F11D;
+  }
+  .biru{
+  	background-color: #0079FF;
+  }
+  .ungu{
+  	background-color: #A800FF;
+  }
 </style>
 
 <body>
   <div>Buat pelangi di sini</div>
+  <div class="merah"></div>
+  <div class="orange"></div>
+  <div class="kuning"></div>
+  <div class="hijau"></div>
+  <div class="biru"></div>
+  <div class="ungu"></div>
 </body>
 
 </html>
